# better-search

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
better_search/api/: search_route.py  server.py
better_search/core/: config.py  logger.py
better_search/db/: database.py
better_search/lib/podcast_index/: dal.py  models.py  schemas.py  utils.py
better_search/lib/vectorstore/: base.py  hybrid_search.py
better_search/workers/: app.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/api/search/: route.ts
frontend/app/components/: SearchBar.tsx  SearchResults.tsx
migrations/: env.py
migrations/versions/: 4d76cdf2e019_create_podcast_and_episode_tables.py  6e3922af94d3_change_podcastindex_id_to_big_integer.py
scripts/: load_to_vdb.py  load_to_vdp.py  load_trending.py  test.ipynb
