[tool.poetry]
name = "better-search"
version = "0.1.0"
description = ""
authors = ["Mamdouh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-podcastindex = "^1.14.0"
celery = "^5.4.0"
redis = "^5.2.1"
fastapi = {extras = ["all"], version = "^0.115.11"}
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
uvloop = "^0.21.0"
sqlalchemy = "^2.0.38"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.1"
asyncpg = "^0.30.0"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
